--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -39,11 +39,13 @@
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Channel.cs" />
 		<Compile Include="MoviesChannel.cs" />
+		<Compile Include="TrainsChannel.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
 		<None Include="i18n\default.json" />
-		<None Include="assets\movies\cranegame.png" />
+		<None Include="assets\movies_craneGame.png" />
+		<None Include="assets\trains_background.png" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
