Add "Governor's Message" channel to PublicAccessTV
* PredictiveCore/NightEvents.cs:
  - Add NightEvents class.

* PublicAccessTV/NightEventsChannel.cs:
  - Add "Governor's Message" channel hosted by Governor.

* PublicAccessTV/assets/nightEvents_background.png:
  - Add background image for NightEventsChannel.

* PublicAccessTV/i18n/default.json:
  - Add nightEvents.* messages for NightEventsChannel.

Miscellaneous:

* PredictiveMods.sln:
  - Fix commit message style.

* ROADMAP:
  - Remove implemented NightEvents and NightEventsChannel.

* PredictiveCore/Utilities.cs:
  - Initialize the NightEvents class.
  - MaxHorizon: Add constant.

* PredictiveCore/Trains.cs:
  - Use MaxHorizon constant.

* PublicAccessTV/ModEntry.cs:
  - Instantiate NightEventsChannel.

* PublicAccessTV/Channel.cs:
  - constructor, Initialize: Add the channel to CustomTVMod on
    construction as well, to ensure the intended menu order.
  - LoadPortrait: Accept either both int xIndex and int yIndex or an
    optional Point index.

* PublicAccessTV/TrainsChannel.cs:
  - LoadMoviePoster: Remove spurious method.

--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -40,12 +40,14 @@
 		<Compile Include="Channel.cs" />
 		<Compile Include="MoviesChannel.cs" />
 		<Compile Include="TrainsChannel.cs" />
+		<Compile Include="NightEventsChannel.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
 		<None Include="i18n\default.json" />
 		<None Include="assets\movies_craneGame.png" />
 		<None Include="assets\trains_background.png" />
+		<None Include="assets\nightEvents_background.png" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
