--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -38,9 +38,9 @@
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Channel.cs" />
-		<Compile Include="MoviesChannel.cs" />
-		<Compile Include="TrainsChannel.cs" />
-		<Compile Include="NightEventsChannel.cs" />
+		<Compile Include="Channels\MoviesChannel.cs" />
+		<Compile Include="Channels\NightEventsChannel.cs" />
+		<Compile Include="Channels\TrainsChannel.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
@@ -51,6 +51,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
+		<Folder Include="Channels\" />
 	</ItemGroup>
 	<Import Project="..\PredictiveCore\PredictiveCore.projitems" Label="Shared" Condition="Exists('..\PredictiveCore\PredictiveCore.projitems')" />
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
