--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -36,6 +36,11 @@
 	<ItemGroup>
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
+		<Compile Include="Experience.cs" />
+		<Compile Include="Experiences\FallbackExperience.cs" />
+		<Compile Include="Experiences\LuckyPurpleExperience.cs" />
+		<Compile Include="Experiences\NothingExperience.cs" />
+		<Compile Include="Experiences\UnlimitedExperience.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
@@ -66,6 +71,7 @@
 		<Folder Include="[JA]ScryingOrb\BigCraftables\ScryingOrb\" />
 		<Folder Include="[MFM]ScryingOrb\" />
 		<Folder Include="[MFM]ScryingOrb\i18n\" />
+		<Folder Include="Experiences\" />
 	</ItemGroup>
 	<Import Project="..\PredictiveCore\PredictiveCore.projitems" Label="Shared" Condition="Exists('..\PredictiveCore\PredictiveCore.projitems')" />
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
