Add NightEventsExperience to ScryingOrb.
* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Add experience for scrying night events.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Enable nightEvents topic.
  - Use ConsumeOffering.
  - Shorten sound delay on following uses.
  - Use DelayedAction to allow other experiences to use afterQuestion.

* ScryingOrb/Experience.cs:
  - Add ConsumeOffering method.

* ScryingOrb/ModEntry.cs:
  - Enable NightEventsExperience.
  - Only respond to button presses if the player is free to interact.

* ScryingOrb/ScryingOrb.csproj:
  - Add NightEventsExperience.

* ScryingOrb/i18n/default.json:
  - Add strings for NightEventsExperience.

* ScryingOrb/[MFM]ScryingOrb/i18n/default.json:
  - Capitalize "Scrying Orb" like the object name.

* ScryingOrb/manifest.json:
  - Refactoring.

* ROADMAP:
  - Remove implemented NightEventsExperience.
  - Add NightEvents.FindItemByNightEvents.

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -41,6 +41,7 @@
 		<Compile Include="Experiences\LuckyPurpleExperience.cs" />
 		<Compile Include="Experiences\NothingExperience.cs" />
 		<Compile Include="Experiences\UnlimitedExperience.cs" />
+		<Compile Include="Experiences\NightEventsExperience.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
