--- a/ScryingOrb/manifest.json
+++ b/ScryingOrb/manifest.json
@@ -6,7 +6,6 @@
   "UniqueID": "kdau.ScryingOrb",
   "EntryDll": "ScryingOrb.dll",
   "MinimumApiVersion": "3.0.0",
-  "Dependencies": [
-  ],
+  "Dependencies": [],
   "UpdateKeys": []
 }
