Add geode treasures experience to ScryingOrb.
* PredictiveCore/Geodes.cs:
  - Add class for predicting treasures from geodes.

* PredictiveCore/NightEvents.cs:
* PredictiveCore/Trains.cs:
  - Make limit uint instead of int.

* PredictiveCore/Utilities.cs:
  - Initialize Geodes class.
  - Add TODOs for other planned classes.

* PredictiveCore/PredictiveCore.projitems:
  - Include Geodes.cs.

* PublicAccessTV/PublicAccessTV.csproj:
  - Remove unneeded reference.

* ROADMAP:
  - Remove implemented items from Geodes and GeodesExperience.

* ScryingOrb/Experience.cs:
  - IsAvailable: Add virtual property.
  - Run: Add virtual method.
  - Try: Check whether IsAvailable too.
  - ShowAnimation: Fix alphaFade value.

* ScryingOrb/Experiences/GeodesExperience.cs:
  - Add experience for predicting treasures from geodes.

* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Say "Types" instead of "Subtopics" and "any" instead of
    "upcoming".
  - Include the closing message as an extra page of the main
    message.

* ScryingOrb/Experiences/NothingExperience.cs:
  - Check availability of experience, though it should never be a
    problem.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Say "Experiences" instead of "Topics".
  - List experiences in a logical order.
  - Omit unavailable experiences.
  - Instantiate experiences early for simplicity.

* ScryingOrb/ModEntry.cs:
  - Try GeodesExperience.
  - Reorder experiences logically.

* ScryingOrb/ScryingOrb.csproj:
  - Include GeodesExperience.cs.

* ScryingOrb/i18n/default.json:
  - geodes.*: Add messages for GeodesExperience.
  - unlimited.experience.*: Rename from unlimited.topic.* and
    reorder logically.
  - nightEvents.type.*: Rename from nightEvents.subtopic.*.
  - Tighten dialogue generally.

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -42,6 +42,7 @@
 		<Compile Include="Experiences\NothingExperience.cs" />
 		<Compile Include="Experiences\UnlimitedExperience.cs" />
 		<Compile Include="Experiences\NightEventsExperience.cs" />
+		<Compile Include="Experiences\GeodesExperience.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
