--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -37,6 +37,7 @@
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Channel.cs" />
+		<Compile Include="Channels\GarbageChannel.cs" />
 		<Compile Include="Channels\MoviesChannel.cs" />
 		<Compile Include="Channels\NightEventsChannel.cs" />
 		<Compile Include="Channels\TrainsChannel.cs" />
@@ -44,9 +45,11 @@
 	<ItemGroup>
 		<None Include="manifest.json" />
 		<None Include="i18n\default.json" />
+		<None Include="assets\garbage_backgrounds.png" />
+		<None Include="assets\garbage_backgrounds.xcf" />
 		<None Include="assets\movies_craneGame.png" />
-		<None Include="assets\trains_background.png" />
 		<None Include="assets\nightEvents_background.png" />
+		<None Include="assets\trains_background.png" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
