--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -38,11 +38,12 @@
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Experience.cs" />
 		<Compile Include="Experiences\FallbackExperience.cs" />
+		<Compile Include="Experiences\GarbageExperience.cs" />
+		<Compile Include="Experiences\GeodesExperience.cs" />
 		<Compile Include="Experiences\LuckyPurpleExperience.cs" />
+		<Compile Include="Experiences\NightEventsExperience.cs" />
 		<Compile Include="Experiences\NothingExperience.cs" />
 		<Compile Include="Experiences\UnlimitedExperience.cs" />
-		<Compile Include="Experiences\NightEventsExperience.cs" />
-		<Compile Include="Experiences\GeodesExperience.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
@@ -69,11 +70,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
+		<Folder Include="Experiences\" />
 		<Folder Include="[JA]ScryingOrb\BigCraftables\" />
 		<Folder Include="[JA]ScryingOrb\BigCraftables\ScryingOrb\" />
 		<Folder Include="[MFM]ScryingOrb\" />
 		<Folder Include="[MFM]ScryingOrb\i18n\" />
-		<Folder Include="Experiences\" />
 	</ItemGroup>
 	<Import Project="..\PredictiveCore\PredictiveCore.projitems" Label="Shared" Condition="Exists('..\PredictiveCore\PredictiveCore.projitems')" />
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
