--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -49,7 +49,9 @@
 		<None Include="assets\garbage_backgrounds.xcf" />
 		<None Include="assets\movies_craneGame.png" />
 		<None Include="assets\nightEvents_background.png" />
+		<None Include="assets\nightEvents_background.xcf" />
 		<None Include="assets\trains_background.png" />
+		<None Include="assets\trains_background.xcf" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
