ScryingOrb: add special cursor; improve dialogues
* ScryingOrb/CursorEditor.cs:
  - Add an AssetEditor subclass to apply the cursor when an orb is
    illuminated.

* ScryingOrb/Experience.cs:
  - Log exceptions from trying experiences as warnings.
  - Track how many orbs are illuminated for use by CursorEditor.
  - Slow down the illumination pulsing animation slightly.

* ScryingOrb/Experiences/UnlimitedExperience.cs:
  - Show a special message on the last day of an unlimited period.

* ScryingOrb/ModEntry.cs:
  - Config: Make internal static to match PublicAccessTV.
  - OrbsIlluminated: Add property to track this count and control
    CursorEditor.
  - cursorEditor: Add field to manage the CursorEditor.
  - OrbTestKit: Add items in correct (reverse) order. Log when done.

* ScryingOrb/assets/cursor.png:
  - Add a rotated version of Abby's Planchette as the cursor.

* ScryingOrb/i18n/default.json:
  - unlimited.lastDay: Add special message for last day of unlimited
    period.
  - *.opening: Describe the offering with an appropriate adjective.
  - *.leave: Expand to fit with the orb's voice.
  - Miscellaneous changes to improve variety and voice consistency.

* ScryingOrb/ScryingOrb.csproj:
  - Include CursorEditor and cursor.png.

* PredictiveCore/Garbage.cs:
* PredictiveCore/Geodes.cs:
* PredictiveCore/Movies.cs:
* PredictiveCore/NightEvents.cs:
* PredictiveCore/Trains.cs:
* PublicAccessTV/ModEntry.cs:
* ScryingOrb/ModEntry.cs:
  - Fix LogLevel usage.

* PublicAccessTV/Channels/MoviesChannel.cs:
* ScryingOrb/Experiences/GarbageExperience.cs:
* ScryingOrb/Experiences/GeodesExperience.cs:
* ScryingOrb/Experiences/NightEventsExperience.cs:
  - Linting.

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -36,6 +36,7 @@
 	<ItemGroup>
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
+		<Compile Include="CursorEditor.cs" />
 		<Compile Include="Experience.cs" />
 		<Compile Include="Experiences\FallbackExperience.cs" />
 		<Compile Include="Experiences\GarbageExperience.cs" />
@@ -47,6 +48,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
+		<None Include="assets\cursor.png" />
+		<None Include="assets\illumination.xcf" />
+		<None Include="assets\illumination.png" />
 		<None Include="i18n\default.json" />
 		<None Include="[JA]ScryingOrb\manifest.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -67,8 +71,6 @@
 		<None Include="[MFM]ScryingOrb\i18n\default.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Include="assets\illumination.xcf" />
-		<None Include="assets\illumination.png" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
