ScryingOrb: implement mystical date picker
* ScryingOrb/DatePicker.cs:
  - Add IClickableMenu implementation for a mystical
    date picker with suitable decorations and Easter eggs.

* ScryingOrb/Experiences/GarbageExperience.cs:
  - Use the DatePicker with an appropriate question.
  - Fix a missed token definition.

* ScryingOrb/ModEntry.cs:
  - Add test_date_picker console command.
  - Rename orb_test_kit console command to
    test_scrying_orb.

* ScryingOrb/assets/calendar.png:
* ScryingOrb/assets/calendar.svg:
* ScryingOrb/assets/dayButton.png:
* ScryingOrb/assets/dayButton.xcf:
  - Add assets for date picker with their working files.

* ScryingOrb/i18n/default.json:
  - datePicker.*: Add strings for date picker.
  - garbage.date.question: Add.

* ScryingOrb/ScryingOrb.csproj:
  - Include new files.

* PredictiveCore/Utilities.cs:
* PublicAccessTV/Channels/MoviesChannel.cs:
* PublicAccessTV/i18n/default.json:
  - Refactor to rely more on base game date methods.

* PredictiveCore/PredictiveCore.projitems:
  - Remove .svg working files as well as .xcf.
  - Log working file removals.

* ScryingOrb/[JA]ScryingOrb/BigCraftables/ScryingOrb/big-craftable.json:
* ScryingOrb/[MFM]ScryingOrb/mail.json
* ScryingOrb/[MFM]ScryingOrb/i18n/default.json:
  - Refactoring.

* ROADMAP:
  - Remove implemented item.

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -37,6 +37,7 @@
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="CursorEditor.cs" />
+		<Compile Include="DatePicker.cs" />
 		<Compile Include="Experience.cs" />
 		<Compile Include="Experiences\FallbackExperience.cs" />
 		<Compile Include="Experiences\GarbageExperience.cs" />
@@ -48,7 +49,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="manifest.json" />
+		<None Include="assets\calendar.png" />
+		<None Include="assets\calendar.svg" />
 		<None Include="assets\cursor.png" />
+		<None Include="assets\dayButton.png" />
+		<None Include="assets\dayButton.xcf" />
 		<None Include="assets\illumination.xcf" />
 		<None Include="assets\illumination.png" />
 		<None Include="i18n\default.json" />
