Add README documentation; misc. fixes, mostly build
* README.md:
* PublicAccessTV/README.md:
* PublicAccessTV/RELEASE-NOTES.md:
* ScryingOrb/README.md:
* ScryingOrb/RELEASE-NOTES.md:
  - Add documentation files.

* ROADMAP.md:
  - Convert to Markdown.

* PublicAccessTV/assets/icon.png:
* PublicAccessTV/assets/icon.xcf:
* ScryingOrb/assets/icon.png:
  - Add icons representing the mods.

* PublicAccessTV/GarbageChannel.cs:
* PublicAccessTV/MoviesChannel.cs:
* PublicAccessTV/NightEventsChannel.cs:
* PublicAccessTV/TrainChannel.cs:
* ScryingOrb/CursorEditor.cs:
* ScryingOrb/DatePicker.cs:
* ScryingOrb/Experience.cs:
  - Make pathnames cross-platform.

* PublicAccessTV/ModEntry.cs:
  - Rename reset_channels/ResetChannels command to
    update_patv_channels/UpdateChannels.

* PublicAccessTV/i18n/default.json:
  - Add commas after nonfinal date tokens.

* ScryingOrb/DatePicker.cs:
  - Properly randomize seasonal debris.
  - CheckRecipe: In addition to implementing the InstantRecipe
    cheat, also give the recipe here if the Wizard friendship is
    appropriate but MFM is not loaded. Makes MFM optional.

* ScryingOrb/ModEntry.cs:
  - Rename reset_orbs command to reset_scrying_orbs.

* PredictiveCore/PredictiveCore.projitems:
  - FixZipAndDeploySafely: Fix detection of current zip file.

* PredictiveMods.sln:
* PredictiveCore/PredictiveCore.shproj:
* PublicAccessTV/PublicAccessTV.csproj:
* PublicAccessTV/manifest.json:
* ScryingOrb/ScryingOrb.csproj:
* ScryingOrb/manifest.json:
* ScryingOrb/[JA]ScryingOrb/manifest.json:
* ScryingOrb/[MFM]ScryingOrb/manifest.json:
  - Bump version to 1.0.0 in anticipation of release.

* PublicAccessTV/PublicAccessTV.csproj:
  - Remove references to working files.

* PublicAccessTV/manifest.json:
* ScryingOrb/manifest.json:
* ScryingOrb/[JA]ScryingOrb/manifest.json:
* ScryingOrb/[MFM]ScryingOrb/manifest.json:
  - Narrow SMAPI dependency to 3.3.2+.

* ScryingOrb/manifest.json:
  - List dependencies on JsonAssets and MFM (since only the
    top

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,52 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Build the mods",
+			"label": "Build",
 			"type": "shell",
 			"command": "msbuild",
 			"args": [
 				"/property:GenerateFullPaths=true",
 				"/t:build",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"presentation": {
+				"reveal": "silent",
+				"panel": "dedicated",
+				"clear": true
+			},
+			"problemMatcher": "$msCompile"
+		},
+		{
+			"label": "Rebuild",
+			"type": "shell",
+			"command": "msbuild",
+			"args": [
+				"/property:GenerateFullPaths=true",
+				"/t:rebuild",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"presentation": {
+				"reveal": "silent",
+				"panel": "dedicated",
+				"clear": true
+			},
+			"problemMatcher": "$msCompile"
+		},
+		{
+			"label": "Clean",
+			"type": "shell",
+			"command": "msbuild",
+			"args": [
+				"/property:GenerateFullPaths=true",
+				"/t:clean",
 				"/consoleloggerparameters:NoSummary"
 			],
 			"group": {
