--- a/ScryingOrb/manifest.json
+++ b/ScryingOrb/manifest.json
@@ -1,11 +1,14 @@
 ﻿{
   "Name": "Scrying Orb",
   "Author": "kdau",
-  "Version": "0.1.0",
+  "Version": "1.0.0",
   "Description": "Craftable machine that takes offerings to predict future events",
   "UniqueID": "kdau.ScryingOrb",
   "EntryDll": "ScryingOrb.dll",
-  "MinimumApiVersion": "3.0.0",
-  "Dependencies": [],
+  "MinimumApiVersion": "3.3.2",
+  "Dependencies": [
+    { "UniqueID": "spacechase0.JsonAssets" },
+    { "UniqueID": "DIGUS.MailFrameworkMod", "IsRequired": false }
+  ],
   "UpdateKeys": []
 }
