ScryingOrb: randomize garbage loot list; improve Easter eggs
* ScryingOrb/Experiences/GarbageExperience.cs:
  - Randomize the order of predictions for variety

* ScryingOrb/Experiences/LuckyPurpleExperience.cs:
  - Make the first interaction a mild warning and the second one
    a dramatic rejection
  - On the second interaction, drop the daily luck to minimum
  - Fail to recognize the offering on later interactions on the
    same day

* ScryingOrb/Experiences/MetaExperience.cs:
  - Add experience reacting to another Scrying Orb as an offering

* ScryingOrb/i18/default.json:
  - luckyPurple.*: Rearrange strings for sequence change
  - meta.*: Add strings for MetaExperience

* ScryingOrb/ScryingOrb.csproj:
* ScryingOrb/ModEntry.cs:
  - Include MetaExperience

* ROADMAP.md:
  - Remove implemented items

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -43,6 +43,7 @@
 		<Compile Include="Experiences\GarbageExperience.cs" />
 		<Compile Include="Experiences\GeodesExperience.cs" />
 		<Compile Include="Experiences\LuckyPurpleExperience.cs" />
+		<Compile Include="Experiences\MetaExperience.cs" />
 		<Compile Include="Experiences\NightEventsExperience.cs" />
 		<Compile Include="Experiences\NothingExperience.cs" />
 		<Compile Include="Experiences\UnlimitedExperience.cs" />
