Add mining channel/experience; TV sound/music; misc. fixes
* PredictiveCore/Mining.cs:
  - Add class to predict mining conditions

* PredictiveCore/Movies.cs:
  - IsAvailable: Check theater presence properly against farmer,
    not current player.

* PredictiveCore/Utilities.cs:
  - AnyoneHasFriendship: Remove disused method.
  - Initialize: Include Mining.

* PredictiveCore/PredictiveCore.projitems:
  - Include Mining.cs.

* PublicAccessTV/Channels/MiningChannel.cs:
  - Add "Mining Advisory" channel hosted by Marlon and Gil.

* PublicAccessTV/Channels/GarbageChannel.cs:
  - IsAvailable: Check friendship for current player only.
  - Show: Add music.

* PublicAccessTV/Channels/MoviesChannel.cs:
  - Show: Add music/sounds.

* PublicAccessTV/Channels/NightEventsChannel.cs:
  - Show: Add opening sounds.
  - Show: Use special background and sound for the
    StrangeCapsule reaction.

* PublicAccessTV/Channels/TrainsChannel.cs:
  - Show: Add opening/closing jingles and train sounds.
  - Show: Use variant background for rain/night.

* PublicAccessTV/Channel.cs:
  - Scene: Remove; now a class in a separate file.
  - QueueScene: Take an already-constructed Scene object.
  - RunProgram: Make public (for Scene) and remove parts now
    handled by Scene.
  - LoadBackground: Add convenience method.

* PublicAccessTV/Scene.cs:
  - Add class, replacing struct in Channel.cs.
  - Add support for built-in sounds/music and custom sounds.

* PublicAccessTV/ModEntry.cs:
  - Include MiningChannel.

* PublicAccessTV/i18n/default.json:
  - mining.*: Add strings for MiningChannel.
  - garbage.closing.progress: Make it Linusier.
  - nightEvents.StrangeCapsule.reaction: Tighten joke.

* PublicAccessTV/assets/mining_backgrounds.png:
* PublicAccessTV/assets/mining_backgrounds.xcf:
  - Add backgrounds for MiningChannel.

* PublicAccessTV/assets/nightEvents_backgrounds.png:
* PublicAccessTV/assets/nightEvents_backgrounds.xcf:
  - Rename from nightEvents_Background.*.
  - Add a freakishly colored 

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -44,6 +44,7 @@
 		<Compile Include="Experiences\GeodesExperience.cs" />
 		<Compile Include="Experiences\LuckyPurpleExperience.cs" />
 		<Compile Include="Experiences\MetaExperience.cs" />
+		<Compile Include="Experiences\MiningExperience.cs" />
 		<Compile Include="Experiences\NightEventsExperience.cs" />
 		<Compile Include="Experiences\NothingExperience.cs" />
 		<Compile Include="Experiences\UnlimitedExperience.cs" />
