--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -37,7 +37,9 @@
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Channel.cs" />
+		<Compile Include="Scene.cs" />
 		<Compile Include="Channels\GarbageChannel.cs" />
+		<Compile Include="Channels\MiningChannel.cs" />
 		<Compile Include="Channels\MoviesChannel.cs" />
 		<Compile Include="Channels\NightEventsChannel.cs" />
 		<Compile Include="Channels\TrainsChannel.cs" />
@@ -46,9 +48,14 @@
 		<None Include="manifest.json" />
 		<None Include="i18n\default.json" />
 		<None Include="assets\garbage_backgrounds.png" />
+		<None Include="assets\mining_backgrounds.png" />
 		<None Include="assets\movies_craneGame.png" />
-		<None Include="assets\nightEvents_background.png" />
-		<None Include="assets\trains_background.png" />
+		<None Include="assets\nightEvents_backgrounds.png" />
+		<None Include="assets\nightEvents_newYear.wav" />
+		<None Include="assets\nightEvents_opening.wav" />
+		<None Include="assets\trains_backgrounds.png" />
+		<None Include="assets\trains_closing.wav" />
+		<None Include="assets\trains_opening.wav" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
