PATV: Add event for Demetrius and letter for Marlon
* PATV/Channels/TrainsChannel.cs:
  - EventMap, Events: Add event for Demetrius at Railroad
  - DialogueCharacter, Dialgoue: Add more dialogue for event
  - IsAvailable: Check for mail flag from event
  - Show: Use "archaeo" stock music (same as event) in leiu
    of custom opening and closing jingles

* PATV/Channels/MiningChannel.cs:
  - IsAvailable: Check for receipt of letter from Marlon
  - Initialize: Deliver letter from Marlon when appropriate

* PATV/DialogueEditor.cs:
* PATV/EventsEditor.cs:
* PATV/MailEditor.cs:
  - Add asset editors to support events and letters

* PATV/Channel.cs:
* PATV/Scene.cs:
  - Refactoring

* PATV/ModEntry.cs:
  - Entry: Set up asset editors
  - Refactoring

* PATV/i18n/default.json:
  - mining.letter.*: Add strings for letter from Marlon
  - trains.event.*: Add strings for event with Demetrius

* PATV/assets/trains_closing.wav:
* PATV/assets/trains_opening.wav:
  - Remove in favor of stock music

* PATV/PublicAccessTV.csproj:
  - Include new asset editors
  - Include movies concession ambient (missed previously)
  - Remove trains jingles

* PATV/README.md:
  - Compatibility: Explain likely issues with 1.5
  - Use: Mention events/letters
  - Acknowledgments: Remove train jingles

* SO/MailEditor.cs:
  - Combine title and content strings with commands stored
    here, like new counterpart for PATV

* SO/ModEntry.cs:
  - CheckRecipe: Don't double-deliver the letter
  - Refactoring

* SO/i18n/default.json:
  - welwickLetter.*: Split into title and content strings

* SO/README.md:
  - Compatibility: Explain likely issues with 1.5
  - Use: Mention events/letters

* ROADMAP.md:
  - Remove implemented event and letter
  - Update plan for Linus event

--- a/PublicAccessTV/PublicAccessTV.csproj
+++ b/PublicAccessTV/PublicAccessTV.csproj
@@ -37,6 +37,9 @@
 		<Compile Include="ModEntry.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="Channel.cs" />
+		<Compile Include="DialogueEditor.cs" />
+		<Compile Include="EventsEditor.cs" />
+		<Compile Include="MailEditor.cs" />
 		<Compile Include="Scene.cs" />
 		<Compile Include="Channels\GarbageChannel.cs" />
 		<Compile Include="Channels\MiningChannel.cs" />
@@ -49,13 +52,12 @@
 		<None Include="i18n\default.json" />
 		<None Include="assets\garbage_backgrounds.png" />
 		<None Include="assets\mining_backgrounds.png" />
+		<None Include="assets\movies_concession.wav" />
 		<None Include="assets\movies_craneGame.png" />
 		<None Include="assets\nightEvents_backgrounds.png" />
 		<None Include="assets\nightEvents_newYear.wav" />
 		<None Include="assets\nightEvents_opening.wav" />
 		<None Include="assets\trains_backgrounds.png" />
-		<None Include="assets\trains_closing.wav" />
-		<None Include="assets\trains_opening.wav" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="i18n\" />
