--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Build",
+			"label": "Build (Debug)",
 			"type": "shell",
 			"command": "msbuild",
 			"args": [
@@ -12,19 +12,12 @@
 				"/t:build",
 				"/consoleloggerparameters:NoSummary"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"presentation": {
-				"reveal": "silent",
-				"panel": "dedicated",
-				"clear": true
-			},
+			"group": { "kind": "build", "isDefault": true },
+			"presentation": { "reveal": "silent", "panel": "dedicated", "clear": true },
 			"problemMatcher": "$msCompile"
 		},
 		{
-			"label": "Rebuild",
+			"label": "Rebuild (Debug)",
 			"type": "shell",
 			"command": "msbuild",
 			"args": [
@@ -32,15 +25,36 @@
 				"/t:rebuild",
 				"/consoleloggerparameters:NoSummary"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"presentation": {
-				"reveal": "silent",
-				"panel": "dedicated",
-				"clear": true
-			},
+			"group": "build",
+			"presentation": { "reveal": "silent", "panel": "dedicated", "clear": true },
+			"problemMatcher": "$msCompile"
+		},
+		{
+			"label": "Build (Release)",
+			"type": "shell",
+			"command": "msbuild",
+			"args": [
+				"/property:GenerateFullPaths=true",
+				"/property:Configuration=release",
+				"/t:build",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"group": "build",
+			"presentation": { "reveal": "silent", "panel": "dedicated", "clear": true },
+			"problemMatcher": "$msCompile"
+		},
+		{
+			"label": "Rebuild (Release)",
+			"type": "shell",
+			"command": "msbuild",
+			"args": [
+				"/property:GenerateFullPaths=true",
+				"/property:Configuration=release",
+				"/t:rebuild",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"group": "build",
+			"presentation": { "reveal": "silent", "panel": "dedicated", "clear": true },
 			"problemMatcher": "$msCompile"
 		},
 		{
@@ -52,15 +66,8 @@
 				"/t:clean",
 				"/consoleloggerparameters:NoSummary"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"presentation": {
-				"reveal": "silent",
-				"panel": "dedicated",
-				"clear": true
-			},
+			"group": "build",
+			"presentation": { "reveal": "silent", "panel": "dedicated", "clear": true },
 			"problemMatcher": "$msCompile"
 		}
 	]
