--- a/PublicAccessTV/manifest.json
+++ b/PublicAccessTV/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Public Access TV",
   "Author": "kdau",
-  "Version": "1.0.0",
+  "Version": "1.0.0-beta.0",
   "Description": "TV channels about mining, shopping, foraging and more",
   "UniqueID": "kdau.PublicAccessTV",
   "EntryDll": "PublicAccessTV.dll",
@@ -9,5 +9,7 @@
   "Dependencies": [
     { "UniqueID": "Platonymous.Toolkit", "MinimumVersion": "1.9.0" }
   ],
-  "UpdateKeys": []
+  "UpdateKeys": [
+    "Nexus:5605"
+  ]
 }
