--- a/ScryingOrb/[JA]ScryingOrb/manifest.json
+++ b/ScryingOrb/[JA]ScryingOrb/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Scrying Orb (Json Assets pack)",
   "Author": "kdau",
-  "Version": "1.0.0",
+  "Version": "1.0.0-beta.0",
   "Description": "Json Assets content pack for Scrying Orb mod",
   "UniqueID": "kdau.ScryingOrb.JA",
   "MinimumApiVersion": "3.3.2",
