--- a/ScryingOrb/manifest.json
+++ b/ScryingOrb/manifest.json
@@ -1,13 +1,15 @@
 ﻿{
   "Name": "Scrying Orb",
   "Author": "kdau",
-  "Version": "1.0.0",
-  "Description": "Craftable machine that takes offerings to predict future events",
+  "Version": "1.0.0-beta.0",
+  "Description": "Craftable that takes offerings to predict future events",
   "UniqueID": "kdau.ScryingOrb",
   "EntryDll": "ScryingOrb.dll",
   "MinimumApiVersion": "3.3.2",
   "Dependencies": [
     { "UniqueID": "spacechase0.JsonAssets" }
   ],
-  "UpdateKeys": []
+  "UpdateKeys": [
+    "Nexus:5603"
+  ]
 }
