Multiplayer and mod compatibility
* PC/Garbage.cs:
  - IsAvailable: Detect "Better Garbage Cans" mod

* PC/Trains.cs:
  - IsAvailable: Detect "Better Train Loot" mod

* PATV/README.md:
* PATV/promo/README.bbcode:
* SO/README.md:
* SO/promo/README.bbcode:
  - Document known-incompatible mods

* PATV/README.md:
* PATV/promo/README.bbcode:
  - Document known issue with second page of channel list

* PATV/PublicAccessTV.csproj:
* SO/ScryingOrb.csproj:
  - Specify C# language version 8.0

* SO/Experiences/UnlimitedExperience.cs:
  - Officially limit unlimited period to same day for farmhands

* SO/Experiences/LuckyPurpleExperience.cs:
* SO/Experiences/MetaExperience.cs:
* SO/Experiences/UnlimitedExperience.cs:
  - Persistent: Rename from SaveData and use new helpers

* SO/Experience.cs:
  - LoadData, SaveData: Add helper methods that disable
    persistence for farmhands in multiplayer

* SO/i18n/default.json:
  - unlimited.initial.main: Rename from unlimited.initial
  - unlimited.initial.farmhand: Add alternate for limited period

* SO/README.md:
* SO/promo/README.bbcode:
  - Document limited unlimited period for farmhands

* ROADMAP.md:
  - Remove completed testing items
  - Move PyTK issue to 1.1.0
  - Add multiplayer messaging item

--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -4,6 +4,7 @@
 		<AssemblyName>ScryingOrb</AssemblyName>
 		<RootNamespace>ScryingOrb</RootNamespace>
 		<ReleaseVersion>1.0.0-beta.0</ReleaseVersion>
+		<LangVersion>8.0</LangVersion>
 		<TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
 		<OutputType>Library</OutputType>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
