--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<AssemblyName>ScryingOrb</AssemblyName>
 		<RootNamespace>ScryingOrb</RootNamespace>
-		<ReleaseVersion>1.0.0-beta.0</ReleaseVersion>
+		<ReleaseVersion>1.0.0</ReleaseVersion>
 		<LangVersion>8.0</LangVersion>
 		<TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
 		<OutputType>Library</OutputType>
