--- a/ScryingOrb/manifest.json
+++ b/ScryingOrb/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "Scrying Orb",
   "Author": "kdau",
-  "Version": "1.0.0-beta.0",
+  "Version": "1.0.0",
   "Description": "Craftable that takes offerings to predict future events",
   "UniqueID": "kdau.ScryingOrb",
   "EntryDll": "ScryingOrb.dll",
